# dotz

./: .SRCINFO  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GUI_README.md  MANIFEST.in  Makefile  PKGBUILD  README.md  SECURITY.md  pyproject.toml  setup-dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: PRE_COMMIT.md  TESTING.md
src/: cli.py  watcher.py
src/dotkeep/: __init__.py  cli.py  core.py  watcher.py
src/dotz/: __init__.py  cli.py  core.py  exceptions.py  templates.py  watcher.py
src/dotz/gui/: __init__.py  main.py  theme.py
src/dotz/gui/widgets/: __init__.py  backups.py  dashboard.py  files.py  init.py  profiles.py  repository.py  settings.py  templates.py
src/loom/: __init__.py  cli.py  core.py  watcher.py
tests/: __init__.py  conftest.py  run_tests.py  test_cli.py  test_cli_config.py  test_cli_coverage.py  test_clone.py  test_core.py  test_core_coverage.py  test_exceptions.py  test_gui_base.py  test_gui_dashboard.py  test_gui_files.py  test_gui_init.py  test_gui_integration.py  test_gui_main.py  test_gui_settings.py  test_integration.py  test_progress.py  test_templates.py  test_templates_cli.py  test_watcher.py
tests/fixtures/: __init__.py
tests/gui/: __init__.py
tests/helpers/: __init__.py  assertions.py  builders.py  mocks.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_core.py  test_templates.py
