[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotz"
version = "0.4.0"
description = "A fully featured, Git-backed dotfiles manager for Linux"
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-or-later"

authors = [
  {name = "Moustafa Salem", email = "salemmoustafa442@gmail.com"}
]

keywords = ["dotfiles", "git", "configuration", "linux", "symlink", "backup", "dotz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
  "typer",
  "gitpython",
  "watchdog"
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "flake8-bugbear",
    "flake8-comprehensions",
    "mypy",
    "bandit[toml]",
    "pydocstyle",
    "pre-commit",
    "build",
    "twine",
    "PySide6>=6.5.0",  # Include GUI deps in dev for development
]

[project.urls]
Homepage = "https://github.com/tTrmc/dotz"
Repository = "https://github.com/tTrmc/dotz"
Documentation = "https://github.com/tTrmc/dotz#readme"
Issues = "https://github.com/tTrmc/dotz/issues"
Changelog = "https://github.com/tTrmc/dotz/releases"

[project.scripts]
dotz = "dotz.cli:app"
dotz-gui = "dotz.gui.main:main"

# Tool configurations
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dotz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "git.*",
    "watchdog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "dotz.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert_used test

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D205", "D400", "D401"]
